Setup/teardown DB for API round-trip test

--- a/retcon.cabal
+++ b/retcon.cabal
@@ -350,8 +350,10 @@ test-suite           api-round-trip-test
                    , binary
                    , bytestring
                    , containers
+                   , filepath
                    , hspec
                    , mtl
+                   , process
                    , text
                    , retcon
 
